Fix T65638: memory leak - modifiers on curves.

We need to tag the `mesh_eval` of curve as owned, when we generate one,
otherwise freeing code would not free it.